--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Water Temperature Graph</title>
+    <title>Water Temperature Sensor</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <div class="logo">Chattanooga Water Temperatures</div>
+        <div class="logo">Water Temperatures</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -18,31 +18,44 @@
         </ul>
     </nav>
 
-    <!-- Main Content -->
+    <!-- Main Container -->
     <div class="container">
-        <h2>Water Temperature Graph</h2>
 
-        <div class="current-temp">
-            <p>Current Temperature: <span id="current-temp">--</span> °F</p>
-        </div>        
-
-        <div class="input-group">
-            <div>
-                <label for="start">Start Date & Time:</label>
-                <input type="datetime-local" id="start">
-            </div>
-            <div>
-                <label for="end">End Date & Time:</label>
-                <input type="datetime-local" id="end">
-            </div>
+        <!-- Current Temperature Box -->
+        <div class="box">
+            
+            <p class="current-temp">Current Temperature: <span id="current-temp">--</span> °F</p>
         </div>
 
-        <div class="button-row">
-            <button onclick="fetchAndPlot()">Generate Graph</button>
-            <button onclick="downloadGraph()">Download Graph</button>
+        <!-- Last 12 Hours Graph Box -->
+        <div class="box">
+            <h2>Last 12 Hours</h2>
+            <canvas id="last12Chart"></canvas>
         </div>
 
-        <canvas id="tempChart" width="800" height="400"></canvas>
+        <!-- Custom Graphing Feature Box -->
+        <div class="box">
+            <h2>Custom Graphing</h2>
+
+            <div class="input-group">
+                <div>
+                    <label for="start">Start Date & Time:</label>
+                    <input type="datetime-local" id="start">
+                </div>
+                <div>
+                    <label for="end">End Date & Time:</label>
+                    <input type="datetime-local" id="end">
+                </div>
+            </div>
+
+            <div class="button-row">
+                <button onclick="fetchAndPlot()">Generate Graph</button>
+                <button onclick="downloadGraph()">Download Graph</button>
+            </div>
+
+            <canvas id="customChart"></canvas>
+        </div>
+
     </div>
 
     <script src="script.js"></script>
