--- a/about.html
+++ b/about.html
@@ -24,14 +24,14 @@
                 This project is designed to monitor and record water temperatures in the Tennessee River, providing valuable information for open water swimmers, fishers, researchers, and anyone else who needs it. By offering real-time temperature readings, we aim to support recreational activities, inform scientific studies, and generally help people make the most of their time on the water. This project is all about gaining a better understanding of our river and benefiting everyone who enjoys its resources.
             </p>
             <p>
-                This is an open-source project, with all files available in this <a href="https://github.com/Mathwiz129/WaterTemperatureSensor" target="_blank">Github repository</a>. The system utilizes a Raspberry Pi Pico W to continuously collect water temperature data from the Tennessee River, recording measurements every 15 seconds. This data is then transmitted to a remote server, allowing anyone to access it. To ensure accessibility and user-friendliness, we have developed this website to compile and present the collected data in real-time.
+                This is an open-source project, with most files (and this website hosted) available in this <a href="https://github.com/Mathwiz129/WaterTemperatureSensor" target="_blank">Github repository</a>. The system utilizes a Raspberry Pi Pico W to continuously collect water temperature data from the Tennessee River, recording measurements every 15 seconds. This data is then transmitted to a remote server, allowing anyone to access it. To ensure accessibility and user-friendliness, we have developed this website to compile and present the collected data in real-time.
             </p>
         </section>
 
         <section id="thank-you" class="about-box">
-            <h2>Thank You</h2>
+            <h2>Thank You / Acknowledgments</h2>
             <p>
-                Special thanks to Owen McKenna for his invaluable support with the backend development and his general assistance throughout the project.
+                Thank you for taking the time to look at this project. I am very proud of it and hope it can help you in any way. Special thanks to Owen McKenna for his invaluable support with the backend development and his general assistance throughout the project.
             </p>
         </section>
     </main>
